Initial support for --add-reads,-opens,-exports (#74)
* Initial support for --add-reads,-opens,-exports

* Fix broken build